Links linked to various prjects

--- a/index.html
+++ b/index.html
@@ -52,20 +52,20 @@
             <img src="assets/images/Capture - Copy.PNG" alt="project image" class="project-img">
             <p class="project-detail">This is a webpage of a QR code which was one of the challenges in the 
                 Frontend Mentor website</p>
-            <button class="project-btn">See more</button>
+            <a href="https://josueetta.github.io/QR-code-design/" target="_blank" class="project-btn">See more</a>
         </div>
 
          <div class="project">
             <img src="assets/images/library design.PNG" alt="library image" class="project-img">
             <p class="project-detail">This is a library webpage where one can add his books to be read and when 
                 read checks it which change the read text </p>
-            <button class="project-btn">See more</button>
+              <a href="https://josueetta.github.io/Library/"  target="_blank" class="project-btn">See more</a>
         </div>
 
         <div class="project">
-            <img src="assets/images/form design.PNG" alt="library image" class="project-img">
-            <p class="project-detail">This is a wepage of a form for the Odin website</p>
-            <button class="project-btn">See more</button>
+            <img src="assets/images/Screenshot 2025-07-19 at 08-49-47 .png" alt="library image" class="project-img">
+            <p class="project-detail">This is a wepage of a form for a an electonic e-commerce website</p>
+             <a href=" https://josueetta.github.io/Form-authentication/" target="_blank" class="project-btn">See more</a>
         </div>
        </div>
       </div>  
